--- a/css.css
+++ b/css.css
@@ -108,7 +108,7 @@ blockquote.twitter-tweet a:focus {
   text-decoration: underline;
 }
 
-.form-horizontal{
+.well {
 background-color:none !important;
   border:none !important
 }
