--- a/css.css
+++ b/css.css
@@ -109,6 +109,6 @@ blockquote.twitter-tweet a:focus {
 }
 
 .well {
-background-color:none !important;
+background-color:transparent !important;
   border:none !important
 }
