--- a/css.css
+++ b/css.css
@@ -110,6 +110,6 @@ blockquote.twitter-tweet a:focus {
 
 .well {
 background-color:transparent !important;
-  border:none !important,
-    margin-left:350px;
+  border:none !important;
+    margin-left:350px
 }
