--- a/css.css
+++ b/css.css
@@ -113,6 +113,6 @@ background-color:transparent !important;
   border:none !important;
     margin-left:300px
 }
-.fb_iframe_widget span {
+.fb_iframe_widget{
   left:550px !important;
 }
